p2/k8s/namespace.yaml
apiVersion: v1        # Namespace is a core resource, not part of apps/v1
kind: Namespace
metadata:
  name: apps          # all Part 2 app/service resources will target this namespace
  labels:
    app.kubernetes.io/name: apps
    app.kubernetes.io/part-of: p2
